@@ -1,6 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
 next:
+         - check_wmi: add performance data
+         - check_wmi: add support for empty-syntax
          - update check_nsc_web to v0.6.3
 
 0.19     Wed Feb 28 00:09:39 CET 2024
